--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.10",
     "axios": "^1.13.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.24",
     "react": "^19.2.0",
